2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlSchemaProvider.cs, NpgsqlDbFactory.cs: improved metadata support
	* NpgsqlPooledDbConnection.cs: expose the GetSchema method of the internal connection

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlSchemaProvider.cs: SupportsSchemaOperation implementation, use of strongly typed
	collections, Drop* and Rename* implementations

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* NpgsqlDbFactory.cs: implemented methods required for the connection settings dialog

2007-07-15  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlDialect.cs: dialect implementation with keyword detection
	* NpgsqlDbFactory.cs: use NpgsqlDialect instead of the obsolete Sql99Dialect

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlConnectionProvider.cs, NpgsqlDbFactory.cs, NpgsqlSchemaProvider.cs: small changes
	to reflect API changes
	* NpgsqlPooledDbConnection.cs: implementation of ConnectionPool aware connection

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlConnectionProvider.cs: set IsConnectionError property

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlConnectionProvider.cs: ExecuteQueryAsDataSet and ExecuteQueryAsDataTable implementation
	* NpgsqlDbFactory.cs: specified the ISqlDialect and added default connection settings

2007-07-02  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlSchemaProvider.cs: 
	Imported the old DbProvider and updated all to code to use the new API

2007-07-01  Ben Motmans <ben.motmans@gmail.com>

	* NpgsqlSchemaProvider.cs: 
	* NpgsqlDbFactory.cs: 
	* NpgsqlConnectionProvider.cs: 
	Imported original code and splitted in 3 classes