@@ -20,6 +20,7 @@
     <File name="./NpgsqlDbFactory.cs" subtype="Code" buildaction="Compile" />
     <File name="./NpgsqlPooledDbConnection.cs" subtype="Code" buildaction="Compile" />
     <File name="./NpgsqlDialect.cs" subtype="Code" buildaction="Compile" />
+    <File name="./NpgsqlGuiProvider.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -38,6 +39,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Ide, Version=0.14.0.0, Culture=neutral" />
     <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Components, Version=0.14.0.0, Culture=neutral" />
     <ProjectReference type="Gac" localcopy="True" refto="NRefactory, Version=0.0.0.0, Culture=neutral" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Database.Designer" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True">
     <BuildFilesVar Sync="True" Name="FILES" />
